<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SendMessage" >

    <TextView
        android:id="@+id/recipient_txtview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/recipient" />

    <ListView
        android:id="@+id/contact_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recipient_txtview"
        android:layout_alignLeft="@+id/recipient_txtview" >
    </ListView>

    <CheckBox
        android:id="@+id/ack_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contact_listview"
        android:layout_alignLeft="@+id/recipient_txtview"
        android:text="@string/ackreceipt" />

    <TextView
        android:id="@+id/urgency_txtview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ack_checkbox"
        android:layout_alignLeft="@+id/recipient_txtview"
        android:text="@string/urgency_txt" />

    <RadioGroup
        android:id="@+id/urgency_radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/recipient_txtview"
        android:layout_below="@+id/urgency_txtview">

        <RadioButton
            android:id="@+id/normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/urgency_rb_normal" />

        <RadioButton
            android:id="@+id/urgent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/urgency_rb_urgent" />
    </RadioGroup>
    
    <TextView
        android:id="@+id/message_txtview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/urgency_radiogroup"
        android:layout_alignLeft="@+id/recipient_txtview"
        android:text="@string/message_txt" />

    <EditText
        android:id="@+id/message_edittxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message_txtview"
        android:layout_alignLeft="@+id/recipient_txtview"
        android:layout_alignRight="@+id/contact_listview"
        android:layout_marginBottom="14dp"
        android:ems="30"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/new_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/recipient_txtview"
        android:layout_alignParentBottom="true"
        android:text="@string/btn_new" />

    <Button
        android:id="@+id/send_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/new_btn"
        android:layout_alignRight="@+id/message_edittxt"
        android:text="@string/btn_send" />

</RelativeLayout> 